--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,1 @@
-MONGO_URL = mongodb+srv://nitinvarghese829:AUGust123@cluster0.ntoinxh.mongodb.net/
+MONGO_URL = mongodb+srv://nitinvarghese829:XXXXXX@cluster0.ntoinxh.mongodb.net/
